--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 .gradle
 */build/*
-*/target/
-
+*/target/*
+*/src/resources/static/
+.vscode
 !gradle/wrapper/gradle-wrapper.jar
 
 ### STS ###
@@ -14,7 +15,7 @@
 .sts4-cache
 
 ### IntelliJ IDEA ###
-/.idea/
+*/.idea/
 *.iws
 *.iml
 *.ipr
