--- a/web2/package.json
+++ b/web2/package.json
@@ -25,18 +25,18 @@
     "@angular/platform-browser": "^7.2.0",
     "@angular/platform-browser-dynamic": "^7.2.0",
     "@angular/router": "^7.2.0",
-    "@stomp/ng2-stompjs": "^7.1.0-beta.1",
-    "core-js": "^2.5.4",
+    "@stomp/ng2-stompjs": "^7.1.0",
+    "core-js": "^2.6.2",
     "hammerjs": "^2.0.8",
     "igniteui-angular-charts": "^6.2.2",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.3.3",
     "sockjs-client": "^1.3.0",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.27"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.12.0",
-    "@angular/cli": "~7.2.0",
+    "@angular-devkit/build-angular": "^0.12.1",
+    "@angular/cli": "^7.2.1",
     "@angular/compiler-cli": "^7.2.0",
     "@angular/language-service": "^7.2.0",
     "@types/jasmine": "~3.3.5",
@@ -52,7 +52,7 @@
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "^5.4.2",
     "ts-node": "~7.0.1",
-    "tslint": "~5.12.0",
+    "tslint": "^5.12.1",
     "typescript": "~3.2.2"
   }
 }
